--- a/kubernete-yaml/secret.yaml
+++ b/kubernete-yaml/secret.yaml
@@ -1,10 +1,8 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: laravel-configmap
-  labels:
-    app: laravel-configmap
-  namespace: default
+  name: laravel-secret
+type: Opaque
 data:
   APP_NAME: "Laravel"
   APP_ENV: "local"
